deploy/k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shark-mqtt
  labels:
    app.kubernetes.io/part-of: shark-mqtt
