deploy/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shark-mqtt
  namespace: shark-mqtt
  labels:
    app.kubernetes.io/name: shark-mqtt
    app.kubernetes.io/component: broker
spec:
  selector:
    app.kubernetes.io/name: shark-mqtt
    app.kubernetes.io/component: broker
  ports:
    - name: mqtt
      protocol: TCP
      port: 18983
      targetPort: 18983
    - name: metrics
      protocol: TCP
      port: 18999
      targetPort: 18999
  type: ClusterIP
