deploy/k8s/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shark-mqtt
  namespace: shark-mqtt
  labels:
    app.kubernetes.io/name: shark-mqtt
    app.kubernetes.io/component: broker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shark-mqtt
      app.kubernetes.io/component: broker
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shark-mqtt
      ports:
        - protocol: TCP
          port: 18983
        - protocol: TCP
          port: 18999
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 18983
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 18999
